--- a/src/languages/korean.json
+++ b/src/languages/korean.json
@@ -3,6 +3,10 @@
     "home":{
       "title":"HOME",
       "desc":"데브-아지트에 방문해 주셔서 감사합니다."
+    },
+    "test":{
+      "title":"TEST",
+      "desc":"test counter, delay link, loading screen"
     }
   }
 }
