--- a/src/languages/korean.json
+++ b/src/languages/korean.json
@@ -27,9 +27,9 @@
       "title": "WORK LIST",
       "desc": "개별프로젝트 내부 업무 목록 입니다."
     },
-    "d3":{
-      "title": "D3 TEST",
-      "desc": "D3 데이터 시각화 적용 테스트"
+    "analysis":{
+      "title": "analysis TEST",
+      "desc": "analysis 데이터 시각화 적용 테스트"
     },
     "member":{
       "title": "MEMBER LIST",
